# system

./: .gitignore  .~lock.system_development.odg#  CMakeLists.txt  Dockerfile  README.md  System_1.cpp  development.odg  main_ideas.odg  system_development.odg
.devcontainer/: devcontainer.json
Obsidian_system/: Аккаунт в блокчейне.md  Анкета.md  Блокчейн.md  Голосование.md  Задачи за донаты.md  Идеология.md  Интеграция i2pd.md  Как решить существующие проблемы.md  Как решить существующие проблемы?.md  Контакты.md  Надо проработать.md  Названия системы.md  Начало.md  Подтвержденные усредненные трудо-часы.md  Пожелания.md  Предложения по улучшению мира.md  Проблемы капитализма.md  Разработка.md  Результаты правления капитализма.md  Репозитории с альтернативным мнением.md  СМИ (средства массовой информации).md  Терминология.md  Цели.md
Obsidian_system/.obsidian/: workspace.json
obsidian/: Cамооуправление не блокчейне.md  Голосование.md  Идеология.md  Капиталистическая власть.md  Контакты.md  Планы.md  Расположение элементов схемы.canvas  Результаты правления капитализма.md  трудо-часы.md
obsidian/.obsidian/: workspace.json
src/: CMakeLists.txt  blocks.h  main.cpp
